--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
